Rewrite home story and fixup home and about spacings

--- a/src_react/app/styl/about.styl
+++ b/src_react/app/styl/about.styl
@@ -3,8 +3,9 @@
 bannerHeightPx = 400px
 bannerHeightMiniPx = 320px
 
-spacing1x = padding6x
-spacing2x = padding12x
+spacingPx1 = 20px
+spacingPx2 = 40px
+spacingPx4 = 80px
 
 #view-about
   margin-top: 0
@@ -22,43 +23,42 @@ spacing2x = padding12x
     width: 100%
     height: 100%
 
-
 .about-text-container
   width: innerMaxWidthPct
   max-width: innerMaxWidthPx1
-  margin: 80px auto
+  margin: spacingPx4 auto
 
   @media screen and (max-width: mediaScreenMaxWidth1)
-    margin: 40px auto
+    margin: spacingPx2 auto
 
   & .about-header-container
-    height: 40px
+    height: spacingPx4
     border-top: 2px solid colorPrimary
-
-    @media screen and (max-width: mediaScreenMaxWidth1)
-      height: 40px
+    box-sizing: border-box
 
   & .about-header
-    margin-top: 28px
-    line-height: 32px
+    position: relative
+    top: 50%
+    transform: translateY(-50%)
+    line-height: spacingPx4
     color: colorPrimary
     font-family: fontFamilyCormorant
     font-size: fontSizeLarge
     letter-spacing: 1px
 
     @media screen and (max-width: mediaScreenMaxWidth1)
-      margin-top: 16px
       line-height: 28px
       font-size: fontSizeNormal
 
   & p
+    margin: 0 0 spacingPx2
     line-height: 32px
-    margin: 40px 0
     font-family: fontFamilyCormorant
     font-size: fontSizeNormal
     letter-spacing: 1px
     color: colorBlackDark
 
     @media screen and (max-width: mediaScreenMaxWidth1)
+      margin-bottom: spacingPx1
       line-height: 28px
       font-size: fontSizeSmall
