--- a/src_react/app/styl/home.styl
+++ b/src_react/app/styl/home.styl
@@ -1,5 +1,8 @@
 @import "constants"
 
+spacingPx1 = 40px
+spacingPx2 = 80px
+
 body
   margin: 0
   background-color: colorBackground
@@ -81,8 +84,8 @@ body
   .home-text-container
     width: innerMaxWidthPct
     max-width: innerMaxWidthPx1
-    line-height: 32px
-    margin: padding8x auto
+    line-height: 36px
+    margin: spacingPx2 auto
     font-family: fontFamilyCormorant
     font-size: fontSizeNormal
     letter-spacing: 1px
@@ -92,7 +95,7 @@ body
       font-size: fontSizeSmall
 
     p
-      margin: padding4x 0
+      margin: spacingPx1 0
 
     a
       text-decoration: none
